--- a/PrompimanFront/package.json
+++ b/PrompimanFront/package.json
@@ -25,6 +25,7 @@
     "@ionic/angular": "^5.0.0",
     "@mobiscroll/angular": "https://npm.mobiscroll.com/@mobiscroll/angular-trial/-/angular-trial-4.10.3.tgz",
     "core-js": "^2.5.4",
+    "ngx-pagination": "^3.3.1",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
